# AIWF

./: .editorconfig  .gitignore  README.md
apps/accel-rust/: Cargo.toml
apps/accel-rust/conf/: transform_engine_profile.json
apps/accel-rust/src/: analysis_ops.rs  api_types.rs  app_state.rs  bootstrap.rs  cleaning_runtime.rs  config.rs  data_source_browser.rs  error.rs  execution_ops.rs  governance_ops.rs  lib.rs  load_ops.rs  main.rs  main_tests.rs  main_tests_part1.rs  main_tests_part1_a.rs  main_tests_part1_b.rs  main_tests_part2.rs  main_tests_part2_a.rs  main_tests_part2_b.rs  main_tests_part3.rs  main_tests_part4.rs  metrics.rs  misc_ops.rs  operator_catalog.rs  operator_catalog_data.rs  platform_ops.rs  plugin_runtime.rs  row_io.rs  schema_registry.rs  transform_support.rs  wasm_ops.rs
apps/glue-python/: app.py  conftest.py  pyproject.toml  requirements-lock.txt  requirements.txt
apps/glue-python/aiwf/: __init__.py  accel_client.py  accel_transport.py  base_client.py  canonical_profiles.py  capabilities.py  cleaning_spec_v2.py  cleaning_templates.py  config.py  dependency_status.py  extensions.py  flow_context.py  governance_manual_reviews.py  governance_quality_rule_sets.py  governance_run_baselines.py  governance_surface.py  governance_workflow_apps.py  governance_workflow_run_audit.py  governance_workflow_sandbox_autofix.py  governance_workflow_sandbox_rules.py  governance_workflow_versions.py  ingest.py  ingest_docling_pipeline.py  ingest_file_readers.py  ingest_image_pipeline.py  ingest_ocr.py  ingest_xlsx_pipeline.py  node_config_contract_runtime.py  (+34 more)
(+1467 files in other folders)
