[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aiwf-glue-python"
version = "0.1.0"
description = "AIWF glue-python service"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.packages.find]
include = ["aiwf*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
